--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,20 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.facd.matchessimulatorapp">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MatchesSimulatorApp"
-        tools:targetApi="31">
-        <activity
-            android:name=".DetailActivity"
-            android:theme="@style/Theme.Simulator.NoActionBar"
-            android:exported="false" />
+        android:theme="@style/Theme.MatchesSimulatorApp">
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -26,6 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".DetailActivity"
+            android:exported="true"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/Theme.Simulator.NoActionBar" />
     </application>
-
 </manifest>
